--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,15 @@
 }
 
 @layer utilities {
+  /* Masquer la scrollbar pour le menu horizontal */
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
   .text-balance {
     text-wrap: balance;
   }
